fix: Correct z-index for mobile breadcrumbs

--- a/src/drive/web/modules/navigation/breadcrumb.styl
+++ b/src/drive/web/modules/navigation/breadcrumb.styl
@@ -1,6 +1,7 @@
 @require 'components/popover.styl'
 @require 'settings/palette.styl'
 @require 'settings/breakpoints.styl'
+@require 'settings/z-index.styl'
 
 @require '../../../styles/topbar'
 
@@ -42,6 +43,7 @@
 +small-screen()
     .fil-path-backdrop
         min-width 0
+        z-index $overlay-index
 
     .fil-path-title
         display        flex
