--- a/src/drive/web/modules/services/components/Picker/picker.styl
+++ b/src/drive/web/modules/services/components/Picker/picker.styl
@@ -47,7 +47,6 @@
 +small-screen()
   .wrapper .breadcrumb
     top 3rem
-    z-index $overlay-index
 
 :global
   #main
